k8s/workers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stem-worker
  namespace: audio2midi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stem-worker
  template:
    metadata:
      labels:
        app: stem-worker
    spec:
      containers:
      - name: stem-worker
        image: rexby117/stem_service:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "1500m"
            memory: "3Gi"
          requests:
            cpu: "1000m"
            memory: "2Gi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: midi-worker
  namespace: audio2midi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: midi-worker
  template:
    metadata:
      labels:
        app: midi-worker
    spec:
      containers:
      - name: midi-worker
        image: rexby117/midi_service:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "1000m"
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "1Gi"
